# spectral-lib

./: .gitignore  Bias.lua  CMakeLists.txt  ComplexInterp.lua  Crop.lua  GraphMaxPooling.lua  HermitianInterp.lua  Interp.lua  Interp3D.lua  InterpFeatures.lua  InterpImage.lua  Jacobian2.lua  LearnableInterp2D.lua  LocallyConnected.lua  Modulus.lua  README.md  Real.lua  SpectralConvolution.lua  SpectralConvolution2.lua  SpectralConvolutionImage.lua  ZeroBorders.lua  complex.lua  compute_image_interp_matrix.lua  cufft.lua  data.lua  debug.lua  estimate_norms.lua  getFilters.lua  init.lua  interp.lua  interpKernel.lua  loadData.lua  model.lua  params.lua  params_img.lua  prepare_imagenet.lua  spatial_kern.m  spectralnet-scm-1.rockspec  spline_interp_kern.m  spline_interp_kern_dyadic.m  (+8 more)
cuda/: Makefile  _bias.cu  accGradParameters.cu  arithmetic.h  arithmetic.hpp  bias.cu  common.hpp  complexInterp.cu  complex_prod.cu  crop.cu  cuda_common.h  cuda_common.hpp  cufft.cpp  cufft.lua  fft_prod.cu  fft_prod2.cu  fft_prod_module.cu  fft_product2.cu  fft_product2.hpp  fill_hermitian.cu  graph_pool.cu  init.cu  modulus.cu  prod.cu  test.lua  updateOutput.cu
cufft/: Makefile  complexInterp.cu  complex_prod.cu  crop.cu  cufft.lua  fft_prod.h  fft_prod2.cu  modulus.cu  test.lua
mresgraph/: .AMGaggregate.m.swp  .build_graph_laplacian_space.m.swp  .gkernel.m.swp  .litekmeans.m.swp  .ms_spectral_clustering.m.swp  .processmerck.m.swp  .scriptmikael.m.swp  .spectral_clustering.m.swp  .timit_laplacian.m.swp  AMGaggregate.m  aggregate_similarity.m  build_graph_laplacian.m  build_graph_laplacian_space.m  build_laplacian.m  compute_graph_timit.m  convert_to_torch.lua  fgf.m  fgf_weights.m  gkernel.m  haarpartition_graph.m  kernelization.m  kernelizationbis.m  litekmeans.m  (+12 more)
(+41 files in other folders)
